c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/initializers/nested_static_compound_initializer_too_long.c
struct inner {
    int i;
};

struct outer {
    struct inner foo;
};

struct outer x = {{1, 2}}; // sub-initializer for nested 'struct inner' has too many elements
